Fixed gallery recursion errors; the gallery images are now hidden by default, so they don't flash when the page is loaded. Closes #17858

--- a/web/src/main/webapp/css/eunis.css
+++ b/web/src/main/webapp/css/eunis.css
@@ -462,10 +462,6 @@ div.overlay .formControls a {
     visibility: visible;
 }
 
-.gallery img {
-    max-width: 388px;
-}
-
 .to-right {
     float: right;
 }
